fix: footer gap

--- a/src/authentication/_styles.scss
+++ b/src/authentication/_styles.scss
@@ -71,7 +71,7 @@
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
+  gap: 8px;
 
   font-size: 14px;
 }
